@startuml
/'
1) patterne Observer pour avoir une interface minimaliste
2) ajout interface pour bateau et player
3) ajout piège
4) ajout des armes
5) ajout du mode île
6) ajout du gameConfig

-- Mise à jour de l'interface minimaliste en conosole
   au fur et à mesure des différentes implémentations.
'/
skinparam linetype ortho


package Model{
    class Game{
        - player1 : Player
        - player2 : Player
        - gameOver : boolean
        - currentPlayer : Player

        + "create" Game(p1: Player, p2 : Player)
        + startGame() : void /' boucle du jeu'/
        + nextTurn() : void
        + isFinished() : boolean
        + placeBoat(grid : Grid, boats : List <Boat>) : void
    }

    class Player{
        - name : string
        - nbBoatRemaining : integer
        - ownGrid : Grid
        - shotGrid : Grid

        + shotGridUpdate(coord : Coordinate, shotResult : gridEntity) : void
        + reciveShot(coord : Coordinate) : gridEntity
    }

    class Grid{
        - grid [][] : gridCells
        - nbBoatRemaining : integer
        - ownBoats : List <Boat>
        - size : integer

        + checkContentCell(coord : Coordinate) : GridEntity
        + isBoatSunk(boat : Boat) : boolean
        + getBoatFromCoord(coord : Coordinate) : Boat
        + shotBoat(boat : Boat) : void
    }

    class GridCell{
        - position : Coordinate
        - content : GridEntity
        + updateContent(entity : GridEntity)
        + getContent() : GridEntity
    }

    class Boat{
        - position : List <Coordinate>
        - size : integer
        - nbShotRecive : integer

        + isSunk() : boolean
        + reciveShot() : void
    }

    class Coordinate{
        - x : integer
        - y : integer

        + coordinateCmp(coord1 : Coordinate, coord2 : Coordinate) : boolean
        + coordinateSearch(lstCoord : List <Coordinate>, coord : Coordinate) : boolean
    }

    enum GridEntity{
        empty
        miss
        hit
        sunk
        boat
    }

    Game *-> "2\n player1\n player2" Player
    Game -->  Grid : <<use>>
    Game -->  Boat : <<use>>
    Game -->  Coordinate : <<use>>
    Game -->  GridEntity : <<use>>


    Player *--> "2\n ownGrid\n shotGrid" Grid
    Player -->  GridEntity : <<use>>
    Player -->  Coordinate : <<use>>

    Grid *--> "*\n _grid" GridCell
    Grid *--> "1..*\n _ownBoat" Boat
    Grid -->  Coordinate : <<use>>
    Grid -->  GridEntity : <<use>>


    GridCell *--> "1\n position" Coordinate
    GridCell *--> "1\n content" GridEntity

    Boat *--> "1..*\n _position" Coordinate

}
@enduml